--- a/public/css/application.css
+++ b/public/css/application.css
@@ -1,5 +1,13 @@
+header {
+  width: 640px;
+  height: 50px;
+  margin: 0px auto;
+}
+
+
+
 .container {
-  margin: 20px auto;
+  margin: 0 auto 40px auto;
   width: 600px;
   padding: 0px 20px 20px 20px;
   border: 1px dotted black;
@@ -7,3 +15,4 @@
 th {
   text-align: left;
 }
+
