--- a/app/views/show.erb
+++ b/app/views/show.erb
@@ -10,3 +10,7 @@
     <% end %>
   <% end %>
 </ul>
+
+<form action="/posts/<%=@post.id%>/edit">
+  <input type="submit" value="Edit Post">
+</form>
