--- a/app/views/_post_list.erb
+++ b/app/views/_post_list.erb
@@ -1,6 +1,6 @@
 <% if @posts %>
   <% @posts.each do |post| %>
-    <h3><%= post.title %></h3><p><%= post.fix_datetime %></p><br>
+    <h3><a href="/posts/<%=post.id%>"><%= post.title %></a></h3><p><%= post.fix_datetime %></p><br>
     <p><%= post.author %></p><br>
     <p><%= post.body %></p><br>
     <ul>
