--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -15,13 +15,16 @@
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script src="/js/application.js"></script>
 
-  <title>DBC Blog | <%= @title %> </title>
+  <title>Bob Loblaw's Law Blog | <%= @title %> </title>
 </head>
 <body>
   <header>
-    <a href="/">Home</a>
-    <a href="/posts/new">Compose a Post</a>
-    <a href="/tags">View Tags</a>
+    <h2>Bob Loblaw's Law Blog</h2>
+    <div class="nav_links">
+      <a href="/">Home</a>
+      <a href="/posts/new">Compose Post</a>
+      <a href="/tags">View Tags</a>
+    </div>
   </header>
   
   <div class="container">
