--- a/app/views/new.erb
+++ b/app/views/new.erb
@@ -1,6 +1,7 @@
+
 <h3>Add your own post</h3>
 
 <form action="/posts" method="POST">
   <%= erb :_post_form %>
-  <input type="submit" value="publish">
+  <input class="publish_button" type="submit" value="publish">
 </form>
