--- a/app/views/edit.erb
+++ b/app/views/edit.erb
@@ -2,10 +2,10 @@
 
 <form action="/posts/<%= @post.id %>" method="POST">
   <%= erb :_post_form %>
-  <input type="submit" value="update">
+  <input class="update_button" type="submit" value="update">
 </form>
 
 <form action="/posts/<%= @post.id %>/delete" method="POST">
-  <input type="submit" value="Delete Post">
+  <input class="delete_button" type="submit" value="delete">
 </form>
 
