--- a/public/css/application.css
+++ b/public/css/application.css
@@ -1,18 +1,187 @@
-header {
-  width: 640px;
-  height: 50px;
-  margin: 0px auto;
+
+.datetime {
+  font-size: 12px;
+  clear:both;
+  font-style:italic;
 }
 
+a {
+  text-decoration: none;
+}
 
+header {
+  width: 760px;
+  height: 50px;
+  margin: 10px auto;
+}
+
+header h2 {
+  float:left;
+}
+
+.nav_links {
+  float:right;
+  padding-top: 25px;
+}
+
+.nav_links a {
+  margin-left:10px;
+  padding: 8px;
+  border: 1px solid lightgray;
+  
+  border-radius: 10px;
+ 
+}
+
+.nav_links a:hover {
+  background-color: #46A7E3;
+  color:white;
+}
+
+.nav_links a:active {
+  background-color: #46A7E3;
+}
 
 .container {
+  font-family:Arial, Helvetica, sans-serif;
   margin: 0 auto 40px auto;
-  width: 600px;
-  padding: 0px 20px 20px 20px;
-  border: 1px dotted black;
+  width: 720px;
+  padding: 0px 20px 50px 20px;
+  border-top: 1px solid lightgray;
+  
 }
+
+.posts, .single_post {
+  margin: 10px 20px 50px 20px;
+  padding-bottom:20px;
+  border-bottom:1px solid lightgray;
+}
+
+.post_body {
+  line-height:1.7em;
+  font-family:"Georgia";
+}
+
 th {
   text-align: left;
 }
+
+/* Tags */
+
+.tag_label {
+  float:left;
+}
+
+.posts .tag_list {
+  float:left;
+  list-style:none;
+  padding-left:0;
+}
+
+.single_post {
+  padding-bottom: 20px;
+  margin-bottom: 10px;
+}
+.single_post .tag_list {
+  float:left;
+  padding-left:0;
+}
+
+.tag_list li {
+  display: inline;
+  border: 1px solid lightgray;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+  border-top-right-radius: 50px;
+  border-bottom-right-radius: 50px;
+  padding: 3px 5px;
+}
+
+.tag_list li:hover {
+  background-color:#46A7E3;
+}
+
+.tag_list a {
+  padding:5px 7px;
+}
+
+.tag_list a:hover {
+  color:white;
+  padding:5px 12px;
+}
+
+.full_tags .tag_list {
+  display:inline-block;
+}
+
+/*.tags_all {
+  width:100px;
+  /*border: 1px solid black;*/
+  /*padding: 5px;
+  background-color:#46A7E3;
+  color:white;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+  border-top-right-radius: 50px;
+  border-bottom-right-radius: 50px;*/
+}*/
+
+
+/* Compose Post */
+.form {
+  height: 300px;
+}
+.form label {
+  display:inline-block;
+  float:left;
+  clear:left;
+  width:75px;
+  text-align:right;
+  padding-right:5px;
+}
+.form input {
+  display:inline-block;
+  float:left;
+  margin-bottom:5px;
+}
+
+.form #post_title, #post_author, #post_body, #tags{
+  width:570px;
+}
+
+.form #post_body {
+  height:150px;
+}
+
+/* Buttons */
+
+.publish_button, .edit_button, .update_button, .delete_button {
+  float:right;
+  margin-right:65px;
+  width:110px;
+  background-color:white;
+  border: 1px solid lightgray;
+  border-radius:25px;
+}
+
+.delete_button {
+  margin-right: 20px;
+}
+
+.publish_button:hover, .edit_button:hover, .update_button:hover {
+  background-color:#46A7E3;
+  width:120px;
+  color:white;
+}
+
+.delete_button:hover {
+  background-color:#FF696B;
+  width:120px;
+  color:white;
+}
+
+
+
+
+
 
