edited error messages

--- a/app/views/error_no_tag.erb
+++ b/app/views/error_no_tag.erb
@@ -1,3 +1,3 @@
-<h3>Ruh roh there aren't any tags called '<%= @tag_name %>' feel free to tag a post of your own <a href="/posts/new">here</a>, also here's an animal.</h3>
+<h3>Good grief, there aren't any tags called '<%= @tag_name %>' feel free to tag a post of your own <a href="/posts/new">here</a>
 
-<img src="http://lorempixel.com/g/600/400/animals" alt="some random animal">
+<img src="/img/ad_charlie_brown.jpg" alt="sad charlie brown">
