--- a/app/views/error_no_post.erb
+++ b/app/views/error_no_post.erb
@@ -1,3 +1,3 @@
-<h3>Ruh roh couldn't find a post with id : <%= params[:id] %>, also here's an animal.</h3>
+<h3>Good grief, couldn't find a post with id : <%= params[:id] %></h3>
 
-<img src="http://lorempixel.com/g/600/400/animals" alt="some random animal">
+<img src="/img/ad_charlie_brown.jpg" alt="sad charlie brown">
