users can post anonymously

--- a/app/views/_post_form.erb
+++ b/app/views/_post_form.erb
@@ -11,5 +11,5 @@
   <label for="tags">Add Tags</label>
   <input id="tags" type="text" name="tags" placeholder="tag1, tag2, tag3, etc." value="<%=@post.try(:list_tags)%>"><br>
   <label for="anonymous">Post anonymously</label>
-  <input id="anonymous" type="checkbox" name="post[anonymous]" value="anonymous">
+  <input id="anonymous" type="checkbox" name="anonymous" value="anonymous">
 </div>
