--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -32,6 +32,8 @@
         <h3>New Users Sign Up Here</h3>
         <label for="email">Email</label>
         <input type="email" name="user[email]" id="email" placeholder="john@smith.com">
+        <label for="username">Pick a Username</label>
+        <input type="text" name="user[username]" id="username" placeholder="johnsmith123">
         <label for="password">Password</label>
         <input type="password" name="user[password]" id="password">
         <input type="submit" value="Sign Up!">
